# stock-screener

./: .gitignore  Dockerfile  README.md  build.sh  nixpacks.toml  railway.json  render.yaml  start-backend.sh  start-frontend.sh
backend/: .env.example  config.py  main.py  pyproject.toml  requirements.txt
backend/api/routes/: bonds.py  portfolio.py  rates.py  screener.py  stocks.py
backend/backtest/: bond_backtest.py  results.csv
backend/cache/: _batch_updated_at.txt
backend/core/: cache.py  scheduler.py
backend/models/: bond_models.py  portfolio.py  screener.py  stock.py
backend/services/: bond_service.py  data_fetcher.py  github_storage.py  iol_auth.py  iol_client.py  monte_carlo.py  portfolio_service.py  rates_service.py  rates_store.py  screener_service.py  universe.py
data/bonds/: AE38_GD38.json  AL29_GD29.json  AL30_GD30.json  AL35_GD35.json  AL41_GD41.json  paper_trades.json
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: bonds.ts  client.ts  portfolio.ts  rates.ts  screener.ts  stocks.ts
frontend/src/components/bonds/: AlertSummary.tsx  OrderPanel.tsx  PairCard.tsx  PaperTradeLog.tsx  RatioChart.tsx
frontend/src/components/common/: ErrorBoundary.tsx  LoadingSpinner.tsx
frontend/src/hooks/: usePortfolio.ts  useScreener.ts  useStockDetail.ts
frontend/src/pages/: BondMonitorPage.tsx  RatesPage.tsx  ScreenerPage.tsx
frontend/src/store/: screenerStore.ts
frontend/src/types/: bonds.ts  index.ts  rates.ts
frontend/src/utils/: colorScale.ts  formatters.ts
(+8 files in other folders)
