[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "uvicorn[standard]>=0.39.0",
    "yfinance>=1.2.0",
]
